# ndarray

./: Cargo.toml  README.rst  RELEASES.md
crates/blas-mock-tests/: Cargo.toml
crates/blas-tests/: Cargo.toml
crates/ndarray-gen/: Cargo.toml
crates/ndarray-gen/src/: array_builder.rs
crates/numeric-tests/: Cargo.toml
crates/numeric-tests/tests/: accuracy.rs
crates/serialization-tests/: Cargo.toml
crates/serialization-tests/tests/: serialize.rs
examples/: axis_ops.rs  bounds_check_elim.rs  column_standardize.rs  convo.rs  life.rs  rollaxis.rs  sort-axis.rs  type_conversion.rs  zip_many.rs
ndarray-rand/: Cargo.toml  README.md
ndarray-rand/src/: lib.rs
ndarray-rand/tests/: tests.rs
src/: aliases.rs  arraytraits.rs  free_functions.rs  impl_2d.rs  impl_constructors.rs  impl_cow.rs  impl_dyn.rs  impl_methods.rs  impl_owned_array.rs  lib.rs  prelude.rs  slice.rs  stacking.rs  tri.rs
src/dimension/: axes.rs  dim.rs  mod.rs  ndindex.rs
src/impl_views/: constructors.rs  conversions.rs  indexing.rs  splitting.rs
src/linalg/: impl_linalg.rs
src/numeric/: impl_float_maths.rs  impl_numeric.rs
src/zip/: mod.rs  zipmacro.rs
tests/: append.rs  array-construct.rs  array.rs  assign.rs  azip.rs  broadcast.rs  clone.rs  complex.rs  dimension.rs  format.rs  higher_order_f.rs  indices.rs  into-ixdyn.rs  iterator_chunks.rs  iterators.rs  ix0.rs  ixdyn.rs  numeric.rs  oper.rs  raw_views.rs  reserve.rs  reshape.rs  s.rs  stacking.rs  views.rs  windows.rs  zst.rs
