[package]
name = "kn0sys_ndarray_rand"
version = "0.16.0"
edition = "2021"
authors = ["bluss"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/kn0sys/ndarray"
documentation = "https://docs.rs/kn0sys-ndarray-rand/"
readme = "README.md"

description = "Constructors for randomized arrays. `rand` integration for `ndarray`."

keywords = ["multidimensional", "matrix", "rand", "ndarray"]

[dependencies]
kn0sys_ndarray = { workspace = true }

rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
rand_isaac = "0.4.0"

[package.metadata.release]
no-dev-version = true
tag-name = "kn0sys_ndarray_rand-{{version}}"

